--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,82 @@
     <artifactId>java-skeleton-project</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <name>Software :: Project :: Skeleton</name>
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <!-- spring boot -->
+        <spring.boot.version>2.7.6</spring.boot.version>
+
+        <!-- maven -->
+        <maven.compiler.plugin>3.8.1</maven.compiler.plugin>
+        <maven.source.plugin>3.0.1</maven.source.plugin>
+        <maven.dependency.plugin>3.1.2</maven.dependency.plugin>
+
+        <!-- logging -->
+        <org.slf4j.api.version>1.7.12</org.slf4j.api.version>
+
+        <!-- test -->
+        <org.mockito.version>5.0.0</org.mockito.version>
+        <org.junit.jupiter.engine.version>5.6.0</org.junit.jupiter.engine.version>
     </properties>
+
+    <dependencies>
+
+        <!-- +++ Logging +++ -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${org.slf4j.api.version}</version>
+        </dependency>
+
+        <!-- +++ Testing +++ -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${org.junit.jupiter.engine.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${org.mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${org.mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.plugin}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>${maven.source.plugin}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>${maven.dependency.plugin}</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
