--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
 
     <dependencies>
 
+        <!-- Spring Boot -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+
         <!-- +++ Logging +++ -->
         <dependency>
             <groupId>org.slf4j</groupId>
